Use 100% width on blocks that does not support alignment on Single Row Column InnerBlocks https://github.com/thatplugincompany/coblocks/issues/104

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -22,7 +22,10 @@
 				> .wp-block {
 					margin-left: auto;
 					margin-right: auto;
-					max-width: calc(6 * (100vw / 12.5)) !important;
+
+					&[data-coblocks-align-support="1"]{
+						max-width: calc(6 * (100vw / 12.5)) !important;
+					}
 
 					&[data-align="wide"] {
 						max-width: calc(6 * (100vw / 8.3)) !important;
